<resources>
    <string name="app_name">Fivelove</string>
    <string name="btn_increase">Increase</string>
    <string name="btn_decrease">Decrease</string>
    <string name="btn_red">Red</string>
    <string name="btn_green">Green</string>
    <string name="btn_yellow">Yellow</string>
    <string name="btn_blue">Blue</string>
    <string name="btn_orange">Orange</string>
    <string name="btn_violet">violet</string>
    <string name="login_facebook">Đăng nhập facebook</string>
    <string name="u_avt">user avt</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="message">Chat</string>
    <string name="contacts">Danh bạ</string>
    <string name="error">Một sự cố đáng tiếc đã xảy ra! Mời bạn quay lại sau ít phút nhé.</string>
    <string name="send_message">Type a message...</string>
    <string name="user_anonymous">Anonymous</string>
    <string name="default_message">No message</string>
    <string name="login_by_facebook">Đăng nhập qua facebook</string>
    <string name="login_by_phone_number">Đăng nhập bằng số điện thoại</string>

    //facebook
    <string name="facebook_app_id">632412510961814</string>
    <string name="fb_login_protocol_scheme">fb632412510961814</string>
    <string name="edt_user_name">Nick name của bạn.</string>
    <string name="edt_phone">Số điện thoại của bạn.</string>
    <string name="btn_save_profile">Lưu Profile</string>
    <string name="btn_logout">Đăng xuất</string>
    <string name="header_hint">Bạn đang nghĩ gì?</string>
    <string name="create_status">Tạo bài viết</string>
    <string name="btn_post">Đăng</string>
    <string name="add_image">Thêm ảnh/video</string>
    <string name="add_background">Màu nền</string>
    <string name="add_friend">Tag bạn bè</string>
    <string name="add_feel">Thêm hoạt động, cảm xúc</string>
    <string name="btn_add">Thêm vào bài viết của bạn</string>

</resources>