<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="user"
            type="com.fivelove.db.model.User" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:background="@color/color_white"
        android:clickable="true"
        android:fitsSystemWindows="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:minHeight="300dp"
        android:touchscreenBlocksFocus="false"
        tools:context="com.fivelove.fragment.StatusFragment">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/circleImageView3"
            android:layout_width="@dimen/circle_image_header"
            android:layout_height="@dimen/circle_image_header"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:src="@{user.avt,default = @drawable/avatar}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_user_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@{user.name, default = Anonymous}"
            android:textColor="@color/color_black"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/btn_post"
            app:layout_constraintStart_toEndOf="@+id/circleImageView3"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_post"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/btn_state"
            android:text="@string/btn_post"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_post">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start|top"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/edt_context"
                    style="@style/Widget.MaterialComponents.AutoCompleteTextView.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:hint="@string/header_hint"
                    android:inputType="textMultiLine|textCapSentences"
                    android:nestedScrollingEnabled="true"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:contentDescription="@string/create_status"
                    android:nestedScrollingEnabled="true"
                    android:scaleType="fitStart"
                    android:visibility="gone"
                    tools:src="@drawable/th" />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@drawable/slim_border"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/btn_add"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="true"
                android:focusable="true"
                android:gravity="start|center_vertical"
                android:paddingStart="@dimen/list_item_spacing"
                android:paddingEnd="@dimen/list_item_spacing"
                android:text="@string/btn_add"
                android:textColor="@color/color_gray"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/img_add_feel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:layout_marginEnd="16dp"
                android:clickable="false"
                android:contentDescription="@string/add_feel"
                android:src="@drawable/ic_tag_faces"
                android:translationZ="90dp" />

            <ImageView
                android:id="@+id/img_add_friends"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:layout_marginEnd="40dp"
                android:clickable="false"
                android:contentDescription="@string/add_friend"
                android:src="@drawable/ic_contacts"
                android:translationZ="90dp" />

            <ImageView
                android:id="@+id/img_add_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:layout_marginEnd="64dp"
                android:clickable="false"
                android:contentDescription="@string/add_image"
                android:src="@drawable/ic_add_photo"
                android:translationZ="90dp" />

        </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>